# libfgs

./: .gitmodules  CMakeLists.txt  GUIDELINES.md  LICENSE  LICENSE2  README.md
browser_plugin/: Makefile_emcc  fgs-module-priv.h  fgs-module.c
cmake/: utils.cmake
docs/: README.md  config_file_win.txt
fgs/: lib.cmake
fgs/api/: error_codes.h  fgs_api.h
fgs/arm/: grain_simulation_modules.c
fgs/include/: fgs_structs.h  grain_simulation_modules.h
fgs/src/: grain_simulation_api.c  grain_simulation_modules.c
fgs/x86/: grain_simulation_modules.c
plugin/browser_plugin/: Makefile_lib  Makefile_wasm  fgs-module-priv.h  fgs-module.c
test/sample_app/: README.md  app.cmake  fgs_app.c  fgs_app.h  fgs_cfg.txt
